force-app/main/default/objects/Trade_Event__c/Trade_Event__c.object-meta.xml
<CustomObject>
    <label>Trade Event</label>
    <nameField>
        <label>Trade Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>