force-app/main/default/objects/Trade_Event__c/fields/Category_Specification__c.field-meta.xml
<CustomField>
    <fullName>Category_Specification__c</fullName>
    <label>Category Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Fashion Show</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Awards Night</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>