force-app/main/default/objects/Trade_Event__c/fields/Cost_of_Gift__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Gift__c</fullName>
    <label>Cost of Gift</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>