force-app/main/default/objects/Trade_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <inlineHelpText>Enter the date of the Trade Event</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>