force-app/main/default/objects/Trade_Event__c/fields/Registered_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Registered_Attendees__c</fullName>
    <label>Registered Attendees</label>
    <summaryForeignKey>Trade_Event_Attendee__c.Trade_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>