force-app/main/default/objects/Trade_Event__c/fields/Total_Event_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Event_Spend__c</fullName>
    <description>Rolls up the tracked visit spend from the event attendees</description>
    <label>Total Event Spend</label>
    <summarizedField>Trade_Event_Attendee__c.Tracked_Spend__c</summarizedField>
    <summaryForeignKey>Trade_Event_Attendee__c.Trade_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>