force-app/main/default/objects/Trade_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Sales Blitz</fullName>
            </value>
            <value>
                <fullName>Fam/Press trips</fullName>
            </value>
            <value>
                <fullName>Market Visits/Workshops</fullName>
            </value>
            <value>
                <fullName>Travel Shows</fullName>
            </value>
            <value>
                <fullName>BVSC Brand event</fullName>
            </value>
            <value>
                <fullName>BVSC PR / new opening / new Brand event / partner event</fullName>
            </value>
            <value>
                <fullName>BV local village Brand event</fullName>
            </value>
            <value>
                <fullName>New brand / Leasing event</fullName>
            </value>
            <value>
                <fullName>HNW (domestic &amp; non ME &amp; Asia) event</fullName>
            </value>
            <value>
                <fullName>HNW (ME) event</fullName>
            </value>
            <value>
                <fullName>HNW (China &amp; SE Asia) event</fullName>
            </value>
            <value>
                <fullName>PR &amp; Influencers event</fullName>
            </value>
            <value>
                <fullName>HNW partner event</fullName>
            </value>
            <value>
                <fullName>Tourism partner event</fullName>
            </value>
            <value>
                <fullName>Marketing event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>