force-app/main/default/objects/Trade_Event__c/fields/Unique_Trade_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Trade_Event_Name__c</fullName>
    <description>Populated with a Workflow rule, this unique field ensures no two trade events share the same name. This is important for the Mass upload tool</description>
    <label>Unique Trade Event Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>