force-app/main/default/objects/Trade_Event__c/fields/VR_Host__c.field-meta.xml
<CustomField>
    <fullName>VR_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VR Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trade_Events</relationshipName>
    <type>Lookup</type>
</CustomField>