force-app/main/default/objects/Trade_Event__c/fields/VR_Host_s_Remerch__c.field-meta.xml
<CustomField>
    <fullName>VR_Host_s_Remerch__c</fullName>
    <label>VR Host/s</label>
    <type>TextArea</type>
</CustomField>