force-app/main/default/objects/Trade_Event__c/fields/Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Website_Address__c</fullName>
    <label>Website Address</label>
    <type>Url</type>
</CustomField>