force-app/main/default/objects/Trade_Event__c/recordTypes/Brand_Entertainment.recordType-meta.xml
<RecordType>
    <fullName>Brand_Entertainment</fullName>
    <active>true</active>
    <label>Brand Entertainment</label>
</RecordType>