force-app/main/default/objects/Trade_Event__c/recordTypes/Corporate_Event.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Event</fullName>
    <active>true</active>
    <label>Corporate Event</label>
</RecordType>