force-app/main/default/objects/Trade_Event__c/recordTypes/HNW_Event.recordType-meta.xml
<RecordType>
    <fullName>HNW_Event</fullName>
    <active>true</active>
    <description>Events for High Net Worth Guests</description>
    <label>HNW Event</label>
</RecordType>