force-app/main/default/objects/Trade_Event__c/recordTypes/Tourism_Event.recordType-meta.xml
<RecordType>
    <fullName>Tourism_Event</fullName>
    <active>true</active>
    <label>Tourism Event</label>
</RecordType>