force-app/main/default/objects/Trade_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registered_Attendees__c</columns>
    <columns>Category_Specification__c</columns>
    <columns>Description__c</columns>
    <columns>Location__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>VR_Host_s_Remerch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>