force-app/main/default/objects/Trade_Event__c/listViews/HNW_Events.listView-meta.xml
<ListView>
    <fullName>HNW_Events</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Registered_Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Trade_Event__c.HNW_Event</value>
    </filters>
    <label>HNW Events</label>
    <language>en_US</language>
</ListView>